added logic to monitor metrics using (micrometer, prometheus & grafana)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,9 @@ management:
   info:
     env:
       enabled: true
+  micrometer:
+    tags:
+      application: ${spring.application.name}
 
 eureka:
   instance:
