implemented distributed tracing using otel(open-telemetry) tempo and grafana

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,6 +55,14 @@ endpoints:
   shutdown:
     enabled: true
 
+logging:
+  level:
+    com:
+      eazybytes:
+        loans: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
 info:
   app:
     name: Loans
